# imperium-docs

./: .gitignore  README.md  architecture.md  principles.md  vision.md
.github/workflows/: atlas-cron.yml  autopublish.yml  (+3 more)
HORUS AI/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
HORUS AI/app/: main.py
HORUS AI/app/api/: routes.py
HORUS AI/app/core/: config.py  errors.py  logging.py  schemas.py  service.py
HORUS AI/app/orchestration/: circuit_breaker.py  engine.py  errors.py  policies.py
HORUS AI/app/providers/: base.py  health.py  http_async.py  registry.py  spec_only.py
HORUS AI/app/queue/: in_memory.py
HORUS AI/app/storage/: artifacts.py  job_store.py
HORUS AI/cli/: main.py
HORUS AI/configs/: accounts.yml  job_templates.yml  policies.yml  providers.yml
HORUS AI/docker/: Dockerfile  docker-compose.yml
HORUS AI/tests/: test_circuit_breaker.py  test_config_validation.py  test_degrade_plan.py  test_key_rotation.py
_tmp/: duo-icons-rightbar.txt  duo-icons.txt
academia/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.js
alexandria/: README.md  alexandria.css  index.html  scrinium-data.js  scrinium-data.json  scrinium.css  scrinium.js
atlas-pipeline/: README.md  requirements.txt
atlas-site/: .env.example  .gitignore  README.md  feed.json  index.html  package-lock.json  package.json  sources.whitelist.json  state.json  styles.css  tsconfig.json
imperium-docs/: README.md  principles.md  vision.md
ordem/: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
(+175 files in other folders)
